--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,86 @@
-body{
-   width: 100%;
-   height: 100%;
-   margin: 0;
-   padding: 0;
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
-#navbar{
-   background-color: hsl(0, 100%, 40%);
-   display: inline-block;
-   float: right;
-   width:100% ;
-   position: absolute;
 
-}
-header, header h1{
-  position: relative;
-  top:100px;
-  color: white;
-}
-#welcome-section{
-  background-color: hsl(60, 100%, 10%);
-  padding: 10px;
-  width: 100%;
-
-}
- .icon{
-   width: 40px;
-   height: 40px;
- }
+#navbar {
+    background-color: hsl(0, 100%, 40%);
+    display: inline-block;
+    float: right;
+    width: 100%;
+    position: absolute;
+    list-style-type: none;
 
 
-.projects{
-   flex:;
+}
+
+.projects {
+    background-color: rgb(33, 119, 189);
+}
+
+#contact {
+    background-color: rgb(15, 42, 78);
+}
+
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    background-color: inherit;
+
+}
+
+/*
+.flex-container>div {
+    background-color: inherit;
+    width: 100px;
+    margin: 40px;
+    padding: 2px;
+    text-align: center;
+    line-height: ;
+    font-size: 10px;
+}
+*/
+header,
+header h1 {
+    position: relative;
+    top: 100px;
+    color: white;
+}
+
+#welcome-section {
+    background-color: hsl(60, 100%, 10%);
+    padding: 10px;
+    width: 100%;
+
+}
+
+.icon {
+    width: 40px;
+    height: 40px;
+}
+
+
+.projects {
+    flex: ;
+}
+
+button {
+    width: 20%;
+    color: blueviolet;
+
+}
+
+footer {
+    display: inline;
+    position: absolute;
+    background-color: hsl(60, 100%, 10%);
+    width: 100%;
+    margin-bottom: 0;
+    margin-top: 20px;
+    padding-top: 0px;
+
+    color: white;
+
 }
